--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ iframe {
     font-family: ryusenkei, sans-serif;
     margin: 20px 0 0 0;
     padding: 40px 0 40px 0;
-    background-color: rgb(88, 88, 88);
+    background-color: rgb(28, 31, 52);
     text-align: center;
 }
 
@@ -157,7 +157,7 @@ iframe {
 =============================================== */
 
 
-/*---------------problemtable---------------*/
+/*=================problemtable=================*/
 
 #pthead td{
     text-align: center;
@@ -207,7 +207,7 @@ iframe {
     transition: 0.2s;
 }
 
-/*---------------工事中マーク---------------*/
+/*=================工事中マーク=================*/
 
 .problemtable a:not(:has(img.fi)) img {
   opacity: 0.5;
@@ -238,7 +238,7 @@ iframe {
   opacity: 1;
 }
 
-/*---------------大数評価---------------*/
+/*=================大数評価=================*/
 
 .problemtable td {
   position: relative; /* ラベルをセル右下に固定するため */
@@ -272,7 +272,7 @@ iframe {
   display: inline-block;
 }
 
-/*---------------新着記事バッジ---------------*/
+/*=================新着記事バッジ=================*/
 
 .problemtable a:has(img.new)::after {
   content: "新着";
@@ -300,7 +300,7 @@ iframe {
     }
 }
 
-/*---------------解答例ありバッジ---------------*/
+/*=================解答例ありバッジ=================*/
 
 /* img.new を含む a を基準にする */
 .problemtable a:has(img.ans) {
@@ -330,7 +330,7 @@ iframe {
 =============================================== */
 
 
-/*---------------一覧に戻る---------------*/
+/*=================一覧に戻る=================*/
 
 .gouts::before{
     color: #ffffff;
@@ -341,7 +341,7 @@ iframe {
 }
 
 
-/*---------------飛び出す解答---------------*/
+/*=================飛び出す解答=================*/
 
 /* チェックボックスは非表示にする */
 .toggle-box input {
@@ -379,7 +379,7 @@ iframe {
 }
 
 
-/*---------------emphbox(青box)---------------*/
+/*=================emphbox(青box)=================*/
 
 .emphbox {
     border: 2px solid #FFF;
@@ -395,7 +395,7 @@ iframe {
 }
 
 
-/*---------------problist(赤box)---------------*/
+/*=================problist(赤box)=================*/
 
 .problist {
     display: grid;
@@ -424,7 +424,7 @@ iframe {
 
 
 
-/*---------------右サイドナビ---------------*/
+/*=================右サイドナビ=================*/
 
 #side-toggle {
   position: fixed;
@@ -523,9 +523,27 @@ iframe {
   display: none;
 }
 
+/*=================サイドバーの暗幕=================*/
+
+#side-overlay {
+  position: fixed;
+  inset: 0; /* top/right/bottom/left: 0; の省略形 */
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  z-index: 998;
+}
+
+/* サイドバーが開いている時だけ表示 */
+#side-overlay.show {
+  opacity: 1;
+  pointer-events: auto;
+}
 
 
-/*---------------上に戻る---------------*/
+
+/*=================上に戻る=================*/
 
 .go-top-float {
   position: fixed;
@@ -559,7 +577,7 @@ iframe {
 }
 
 
-/*---------------画像拡大モーダル---------------*/
+/*=================画像拡大モーダル=================*/
 #img-modal {
   display: none;
   position: fixed;
@@ -582,3 +600,4 @@ iframe {
 .clickable-img {
   cursor: zoom-in;
 }
+
