--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,12 @@ p, li, td{
 
 a:link{
     text-decoration: none;
-    color: dodgerblue;
+    color: #8ee5ff;
 }
 
 a:visited{
     text-decoration: none;
-    color: dodgerblue;
+    color: #00c3ff;
 }
 
 a:hover{
@@ -51,7 +51,7 @@ a:hover{
 }
 
 a:active{
-    color: dodgerblue;
+    color: #8ee5ff;
     text-decoration: underline;
 }
 
@@ -605,4 +605,65 @@ iframe {
   cursor: zoom-in;
   width: 100%;
   border: 4px solid #02075c;
+}
+
+
+/*=================ブックマークボタン=================*/
+
+.bookmark-box {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: 24px;
+  padding-left: 10px;
+  width: 100%;
+  height: 3em;
+  background-color: #003586;
+  border-radius: 4px;
+}
+
+#bookmark-btn {
+  font-size: 2.3em;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #888;
+  transition: 0.2s;
+  translate: 0 -2px;
+}
+
+#bookmark-btn.bookmarked {
+  color: rgb(58, 209, 255);
+}
+
+#bookmark-btn:hover {
+  transform: scale(1.1);
+  transition: 0.2s;
+}
+
+
+/*=================ブックマーク一覧=================*/
+
+#bookmarks {
+  margin-top: 40px;
+  border: solid aquamarine 1px;
+  padding: 6px;
+  border-radius: 6px;
+}
+
+#bookmark-list {
+  list-style: none;
+  padding: 0;
+  border: solid #FFF 2px;
+}
+
+#bookmark-list li {
+  margin: 0;
+  border: solid #FFF 2px;
+  padding: 1em 1em;
+  background-color: #101e1a;
+}
+
+#bookmark-list li::before {
+  content: "■ ";
 }
