--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,9 @@ iframe {
 .problemtable-exp{
   text-align: center;
   opacity: 0;
+  font-weight: bold;
+  text-decoration: underline;
+  background-color: #002b28;
 }
 
 .shadowbox{
